# binrun

./: .gitignore  README.md  Taskfile.yml  emlog.txt  go.mod  go.sum
cmd/binrun/: main.go
cmd/gonads/: main.go
docs/: Jetstream_Reference_(kickoff_README).md  command-widget.md  datastar-backend-reference.md  datastar-frontend-reference.md  declarative-layout.md  http-command-cleanup.md  layout-and-rendering-system.md  layout-manager.md  layout-refactor-gemini-new-terminal-addendum.md  layout-refactor-gemini-new.md  loose-ends-investigation.md  message-schema-refactor.md  nats_embedded_server_fundamentals.md  nats_jetstream_consumer.md  nats_jetstream_go.md  process_report.md  rcrainfo_violations_py.md  unified-session-model.md
docs/front/: claude-dr-technical-guide.md  o3-basic-prompt.md  o3-dr-technical-guide.md
docs/utils/: context.sh  system_prompt_maybe.txt
internal/: config.go  core.go  embedded_server.go  handlers.go  logging.go  metrics.go  presets.go  renderer.go  renderers.go  script_runner.go  server.go  terminal.go  types.go  ui_stream.go  utils.go
internal/layout/: converter.go  dynamic_presets.go  (+4 more)
scripts/analyze_gong/: .tmp_input.json  main.py  pyproject.toml
scripts/analyze_gong/prompts/: call_analysis_instructions.md  call_analysis_schema.py  synthesis.md
scripts/rcrainfo_account_profile/: in.schema.json  main.py  pyproject.toml
scripts/rcrainfo_account_profile/types/: in.ts
scripts/scrape_front_docs/: entry.html  in.schema.json  main.py  pyproject.toml
ui/: index.templ  index_templ.go  static.go
util/: filehtml.go  subject.go
(+68 files in other folders)
