[project]
name = "rcrainfo-account-profile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "duckdb>=0.9.2",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0"
]
